@@ -101,19 +101,6 @@
         </layout>
        </item>
        <item>
-        <widget class="QLabel" name="includePasswordExplanationLabel">
-         <property name="text">
-          <string>&lt;strong&gt;Note:&lt;/strong&gt; changing the session password will cause the link to stop working! If someone else changes the password, you have to reconnect for this dialog to update.</string>
-         </property>
-         <property name="textFormat">
-          <enum>Qt::RichText</enum>
-         </property>
-         <property name="wordWrap">
-          <bool>true</bool>
-         </property>
-        </widget>
-       </item>
-       <item>
         <spacer name="urlTopSpacer">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
